# YOPortal

./: datahandlers.py  display_yo.py  helpers.py  main.py  pyproject.toml  yogoals.py  yolist.py  yonotifications.py  yoprofile.py  yotasks.py
data/: yop-goal.csv  yop-message.csv  yop-notification.csv  yop-task.csv  yop-user.csv
